Hero component first edits

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,6 @@ import Hero from '../components/Hero.astro';
 	<Hero
 		videoSrc="/videos/hero-video-1.mp4"
     title="Where reality meets code"
-    subtitle="Crafting digital experiences with passion"
+    subtitle="Crafting <strong>your dreams</strong> with passion"
   />
 </Layout>
