--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 const { videoSrc, title, subtitle } = Astro.props;
 ---
 
-<section>
+<section class="hero">
   <video 
     src={videoSrc}
     autoplay
@@ -13,7 +13,7 @@ const { videoSrc, title, subtitle } = Astro.props;
   ></video>
   <div class="hero__content">
     <h1 class="hero__title">{title}</h1>
-    <p class="hero__subtitle">{subtitle}</p>
+    <p set:html={subtitle} class="hero__subtitle"></p>
   </div>
 </section>
 
@@ -21,11 +21,27 @@ const { videoSrc, title, subtitle } = Astro.props;
   .hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .hero__title {
+    font-size: 4rem;
+    margin: 0;
+    text-transform: uppercase;
+  }
+
+  @media (max-width: 768px) {
+    .hero__title {
+      font-size: 3rem;
+    }
+
+    .hero__content {
+      padding: 0 3rem;
+    }
   }
 
   .hero__video {
@@ -43,5 +59,6 @@ const { videoSrc, title, subtitle } = Astro.props;
     z-index: 1;
     text-align: center;
     color: white;
+    max-width: 890px;
   }
 </style>
