Change favicon and add two depending color-scheme preference

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,8 @@ import Navbar from "../components/Navbar.astro";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
 		<meta name="generator" content={Astro.generator} />
 
 		<title>Anna Prats, developer</title>
