--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -40,23 +40,25 @@ const { videoSrc, title, subtitle } = Astro.props;
   }
 
   .hero__content {
-    position: relative;
+    position: absolute;
     z-index: 1;
-    text-align: center;
+    text-align: left;
     color: white;
     max-width: 890px;
-    margin: 0 auto;
+    bottom: 3rem;
+    left: 3rem;
   }
 
   .hero__title {
-    font-size: 4rem;
+    font-size: 2.5rem;
     margin: 0;
     text-transform: uppercase;
+    line-height: 1;
   }
 
   .hero__subtitle {
     font-size: 1.5rem;
-    margin-top: 1.5rem;
+    margin-top: .2rem;
     margin-bottom: 0;
     font-weight: 400;
     line-height: 1.3;
