Add card to homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
+import Card from '../components/Card.astro';
 ---
 
 <Layout>
@@ -9,4 +10,9 @@ import Hero from '../components/Hero.astro';
     title="Where reality meets code"
     subtitle="Crafting <strong>your dreams</strong> with passion"
   />
+  <Card title="The developer">
+    <p class="big">I'm Anna — a web developer turning ideas into elegant, functional experiences.</p>
+    <p class="big">My goal is to craft each project with care, creativity, and cutting-edge tech.</p>
+    </p>
+  </Card>
 </Layout>
