--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+/* Fonts */
 @font-face {
   font-family: 'Neue Montreal';
   src: url('/fonts/NeueMontreal-Medium.woff2') format('woff2');
@@ -12,4 +13,8 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
+}
+
+body {
+  cursor: crosshair
 }
