--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -50,7 +50,7 @@ const { videoSrc, title, subtitle } = Astro.props;
   }
 
   .hero__title {
-    font-size: 2.5rem;
+    font-size: 4rem;
     margin: 0;
     text-transform: uppercase;
     line-height: 1;
@@ -66,14 +66,16 @@ const { videoSrc, title, subtitle } = Astro.props;
 
   @media (max-width: 768px) {
     .hero__title {
-      font-size: 3rem;
+      font-size: 2rem;
     }
 
     .hero__content {
-      padding: 0 3rem;
+      padding: 0 2rem;
+      left: 0;
+      bottom: 6rem;
     }
     .hero__subtitle {
-      font-size: 1.15rem;
+      font-size: .8rem;
     }
   }
 </style>
