The tools section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,4 +25,5 @@ const steps = [
   <Card title="Our journey together" />
   <Timeline steps={steps} />
   <script type="module" src="/src/scripts/journey-animation.js"></script>
+  <Card title="The tools" invert></Card>
 </Layout>
