Detail adjusments, new favicons

--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -76,4 +76,10 @@ const { steps = [] }: { steps?: Step[] } = Astro.props;
     text-transform: uppercase;
   }
 
+  @media (min-width: 768px) {
+    .timeline__item {
+      padding-bottom: 1.5rem;
+    }
+  }
+
 </style>
