Video position fix

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ const { videoSrc, title, subtitle } = Astro.props;
   }
 
   .hero__video {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
