Add .js files to public folder

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ import Navbar from "../components/Navbar.astro";
       </div>
     </div>
 
-    <script type="module" src="/src/scripts/scroll-smooth.js"></script>
+    <script type="module" src="/scripts/scroll-smooth.js"></script>
 
 	</body>
 </html>
