fix vw problems in responsive

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,7 +21,7 @@ const navItems = [
     position: absolute;
     top: 0;
     z-index: 2;
-    width: 100vw;
+    width: 100%;
   }
 
   .navbar__list {
