--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -32,7 +32,7 @@ const { videoSrc, title, subtitle } = Astro.props;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     z-index: 0;
