--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,11 @@
   font-display: swap;
 }
 
+html,
+body {
+  overflow-x: hidden !important;
+}
+
 body {
   cursor: crosshair;
-  overflow-x: hidden;
 }
