--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,13 +29,9 @@ const { videoSrc, title, subtitle } = Astro.props;
   }
 
   .hero__video {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100dvh;
+    height: 100%;
     object-fit: cover;
-    z-index: 0;
     pointer-events: none;
   }
 
@@ -65,6 +61,9 @@ const { videoSrc, title, subtitle } = Astro.props;
   }
 
   @media (max-width: 768px) {
+    .hero {
+      height: 100svh;
+    }
     .hero__title {
       font-size: 2rem;
     }
