--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Navbar from "../components/Navbar.astro";
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="icon" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
     <link rel="icon" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
 		<meta name="generator" content={Astro.generator} />
