--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -7,7 +7,7 @@ interface Step {
 const { steps = [] }: { steps?: Step[] } = Astro.props;
 ---
 
-<section class="timeline">
+<section class="timeline white-section">
   <div class="timeline__line">
     <svg
       width="280"
