--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -12,7 +13,7 @@ import Navbar from "../components/Navbar.astro";
     <link rel="icon" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
 		<meta name="generator" content={Astro.generator} />
 
-		<title>Anna Prats, developer</title>
+		<title>anna prats | web developer</title>
 
     
     <!-- Dev icons library -->
@@ -31,6 +32,7 @@ import Navbar from "../components/Navbar.astro";
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js" defer></script>
     <script src="/scripts/gsap-animation.js" defer></script>
   </body>
+  <Footer />
 </html>
 
 <style>
