--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,12 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    border-top: 1px solid #111111;
+  }
+
+  footer p {
+    margin-block-start: 0;
+    margin-block-end: 0;
   }
 
   footer img {
