--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="white-section">
-  <img src="/public/favicon-dark.svg" alt="" />
+  <img src="/favicon-dark.svg" alt="" />
   <p>Anna Prats Marín © 2025.</p>
 </footer>
 
