refactor: tech icons split .js file

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -28,6 +28,11 @@ const techIcons = [
   ))}
 </div>
 
+<script type="module" is:inline>
+  import animateTechIcons from '/src/scripts/tech-icons-gsap.js';
+  animateTechIcons();
+</script>
+
 <style>
 .technologies-grid {
   padding-top: 2rem;
