--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -24,6 +24,11 @@ const navItems = [
   </div>
 </nav>
 
+<script type="module" is:inline>
+  import animateMenu from "/src/scripts/menu-animation.js";
+  animateMenu();
+</script>
+
 <style>
   .navbar__hamburger {
     position: fixed;
