refactor: scroll smooth .js split

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,6 @@ import Footer from "../components/Footer.astro";
 		<meta name="generator" content={Astro.generator} />
 
 		<title>anna prats | web developer</title>
-
     
     <!-- Dev icons library -->
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
@@ -33,7 +32,13 @@ import Footer from "../components/Footer.astro";
 
 <script type="module" is:inline>
   import animateTexts from "/src/scripts/text-gsap.js";
+  import animateScrollSmooth from "/src/scripts/scroll-smooth-gsap.js";
+
   animateTexts();
+  
+  if (window.innerWidth > 768) {
+    animateScrollSmooth();
+  }
 </script>
 
 <style>
