--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,8 @@
 ---
 const navItems = [
   { name: 'Home', href: '/' },
-  { name: 'About', href: '/about' },
-  { name: 'Blog', href: '/blog' }
+  { name: 'Projects', href: '/projects'},
+  { name: 'About', href: '/about' }
 ];
 
 ---
