Move statics to public folder and change paths

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -23,8 +23,8 @@ const siteKey = import.meta.env.PUBLIC_RECAPTCHA_KEY;
 </section>
 
 <script type="module" is:inline>
-  import setupContactForm from '/src/scripts/contact-form.js';
-  import imageAnimation from '/src/scripts/image-gsap.js';
+  import setupContactForm from '/scripts/contact-form.js';
+  import imageAnimation from '/scripts/image-gsap.js';
 
   setupContactForm();
   imageAnimation();
