--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ const navItems = [
 </nav>
 
 <script type="module" is:inline>
-  import animateMenu from "/src/scripts/menu-animation.js";
+  import animateMenu from "/scripts/menu-animation.js";
   animateMenu();
 </script>
 
