--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,10 @@ import Footer from "../components/Footer.astro";
     <!-- Dev icons library -->
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 
+    <!-- GSAP CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
 	</head>
 	<body>
     <Navbar />
@@ -31,7 +35,7 @@ import Footer from "../components/Footer.astro";
 </html>
 
 <script type="module" is:inline>
-  import animateTexts from "/src/scripts/text-gsap.js";
+  import animateTexts from "/scripts/text-gsap.js";
   animateTexts();
 </script>
 
