--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -24,10 +24,7 @@ const navItems = [
   </div>
 </nav>
 
-<script type="module" is:inline>
-  import animateMenu from "/scripts/menu-animation.js";
-  animateMenu();
-</script>
+<script src="/scripts/menu-animation.js" defer></script>
 
 <style>
   .navbar__hamburger {
