--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -28,10 +28,8 @@ const techIcons = [
   ))}
 </div>
 
-<script type="module" is:inline>
-  import animateTechIcons from '/scripts/tech-icons-gsap.js';
-  animateTechIcons();
-</script>
+<script src="/scripts/tech-icons-gsap.js" defer></script>
+
 
 <style>
 .technologies-grid {
