--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,12 +41,7 @@ const socialMediaLinks = [
   </Card>
 </Layout>
 
-<script type="module" is:inline>
-  import animateScrollSmooth from "/scripts/scroll-smooth-gsap.js";
-  if (window.innerWidth > 768) {
-    animateScrollSmooth();
-  }
-</script>
+<script src="/scripts/scroll-smooth-gsap.js" defer></script>
 
 <style>
   .social-links {
