--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,4 @@ const steps = [
   </Card>
 </Layout>
 
-<script type="module" is:inline>
-  import animateScrollSmooth from "/scripts/scroll-smooth-gsap.js";
-  if (window.innerWidth > 768) {
-    animateScrollSmooth();
-  }
-</script>
+<script src="/scripts/scroll-smooth-gsap.js" defer></script>
