--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,9 +16,4 @@ import Card from "../components/Card.astro";
   <ProjectsGrid type="practice" />
 </Layout>
 
-<script type="module" is:inline>
-  import animateScrollSmooth from "/scripts/scroll-smooth-gsap.js";
-  if (window.innerWidth > 768) {
-    animateScrollSmooth();
-  }
-</script>
+<script src="/scripts/scroll-smooth-gsap.js" defer></script>
