Add new project into practice section

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -54,7 +54,8 @@ const navItems = [
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: top;
+    justify-content: start;
+    backdrop-filter: blur(10px);
     padding-top: 5rem;
     gap: 1rem;
   }
